web: fixes bug that broke other dropdown menus
fixed bug that caused other dropdown menus to cut off content

Closes #714
 * Fix issues with remaining drop down menus.

--- a/modules/shell/cockpit.css
+++ b/modules/shell/cockpit.css
@@ -29,7 +29,7 @@ a {
     cursor: pointer;
 }
 
-.dropdown-menu {
+.date-filter {
     width: 100%;
     min-width: 0px;
 }
